# LakeCompilerV1

./: .gitignore  .swp  CMakeLists.txt  ExpTerFac.h  Lexxer.cpp  Lexxer.h  Makefile  README.MD  clean.sh  generation.cpp  git.sh  linecount.sh  main.cpp  parse.cpp  parser.h  t.s  test  test.js  test.s  test.txt  tools.cpp  tools.h  transpile.h
ARMTarget/: ARMTarget.cpp  ARMTarget.h
MipsTarget/: ExpressionTree.cpp  ExpressionTree.h  MipsTarget.cpp  MipsTarget.h  UtilFunctions.cpp  UtilFunctions.h  VaraibleScope.cpp  VaraibleScope.h  builtInFunction.h  builtInFunctions.cpp
TestPrograms/: AddingNumbers.lk  Factorial.lk  Fibonacci.lk  FizzBuzz.lk  HelloWorld.lk  PrintAlphabet.lk
compilerFrontend/: Lexxer.cpp  Lexxer.h  optimizations.cpp  optimizations.h  parse.cpp  parser.h  settings.json
src/ARMTarget/: ARMTarget.cpp  ARMTarget.h
src/CompilerFrontend/: Lexxer.cpp  Lexxer.h  optimizations.cpp  optimizations.h  parse.cpp  parser.h
src/LLVMBackend/: CodeGen.cpp  LLVMTarget.cpp  LLVMTarget.h
src/MipsTarget/: ExpirementalTypeChecking.cpp  ExpirementalTypeChecking.h  ExpressionTree.cpp  ExpressionTree.h  MipsTarget.cpp  MipsTarget.h  Register.cpp  Register.h  UtilFunctions.cpp  UtilFunctions.h  VaraibleScope.cpp  VaraibleScope.h  builtInFunction.h  builtInFunctions.cpp
x86TargetFiles/: x86Target.cpp  x86Target.h
